--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@capacitor/app": "6.0.0",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "6.0.0",
+    "@capacitor/device": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
+    "@capacitor/motion": "^6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
