--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "prettier": "prettier --write \"src/**/*.{ts,html,css,scss,json}\"",
+    "prettier:check": "prettier --check \"src/**/*.{ts,html,css,scss,json}\""
   },
   "private": true,
   "dependencies": {
@@ -66,7 +68,14 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.3.2",
     "typescript": "~5.4.0"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,html,css,scss,json}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "description": "An Ionic project"
 }
